# InspyHardStat

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: python-publish.yml
Scripts/: config_restore.py  inspy_hard_stat.py  proc_watchdog.py
inspy_hard_stat/: errors.py  ihs_lib.rar  utils.py
inspy_hard_stat/about/: __init__.py
inspy_hard_stat/about/version/: __init__.py
inspy_hard_stat/apps/backup_restore/: __init__.py  constants.py  errors.py  utils.py
inspy_hard_stat/apps/backup_restore/ui/: __init__.py
inspy_hard_stat/cli/: __init__.py  pid.py
inspy_hard_stat/cli/arguments/: __init__.py  meta.py  utils.py
inspy_hard_stat/cli/subcommands/: base.py
inspy_hard_stat/config/: __init__.py  backup_restore.py  constants.py  errors.py  factory.py  utils.py
inspy_hard_stat/config/developer/: __init__.py  config.py
inspy_hard_stat/config/dirs/: __init__.py  alternates.py  defaults.py
inspy_hard_stat/config/spec/: __init__.py  core_config.json  lhm_config.json  serial_config.json
inspy_hard_stat/crypt/: __init__.py
inspy_hard_stat/crypt/linux/: __init__.py
inspy_hard_stat/crypt/win32/: __init__.py
inspy_hard_stat/ihs_lib/: __init__.py  battery.py  cpu.py  disk.py  memory.py  pid.py
inspy_hard_stat/ihs_lib/helpers/: __init__.py  time.py
inspy_hard_stat/ihs_lib/libre_hw_monitor/: __init__.py  utils.py
inspy_hard_stat/ihs_lib/libre_hw_monitor/config/: __init__.py  (+1 more)
inspy_hard_stat/ihs_lib/serial/: __init__.py  config.py
inspy_hard_stat/log_engine/: __init__.py  config.py
inspy_hard_stat/scripts/config_restore/: arguments.py
(+5 files in other folders)
